Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16513

Applications using QMediaObject to play from HTTP URLs get in a state where it is not possible to play media from HTTP link

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.2
    • 4.7.1
    • (Inactive) Phonon
    • None
    • S60 5.0, latest code from git.
    • b58eb041

    Description

      This has been seen using the Phonon MMF backend. Application can get in to a state where it is not possible to playback from an HTTP URL, even after a reboot. It happens after 16 attempts to play from an HTTP URL from the same application, so is not particularly common, but once the application is in that state I could not play via HTTP until I did a factory reset on the phone.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gastockw Gareth Stockwell
            ruths Ruth Sadler
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes