Fixed resource leak in Phonon MMF backend

Task-number: QTBUG-16513
Reviewed-by: Gareth Stockwell
(cherry picked from commit b58eb0419f9f724af5d9baf8bbce4e0f1e2f3f8b)